--- a/mediaqueries_exercises/exercise_2/index.html
+++ b/mediaqueries_exercises/exercise_2/index.html
@@ -11,7 +11,7 @@
 
     <main>
         <h1>Media Queries: Exercise 2</h1>
-        <p>Change the style of the page a different breakpoints!</p>
+        <p>Change the style of the page at different breakpoints!</p>
         <ol>
             <li>Style the page for mobile: add a margin, change the font-size & font-family etc.</li>
             <li>Add a breakpoint for tablets. Change the styling of the page (margin, font-size, padding etc.) & change the font color</li>
