--- a/bootstrap_exercises/bootstrap_project/index.html
+++ b/bootstrap_exercises/bootstrap_project/index.html
@@ -88,7 +88,7 @@
         <div class="cities">           
             <div class="list-group mt-5 mb-5 text-center">
                 <a href="https://www.worldatlas.com/articles/the-biggest-cities-in-germany.html" target="_blank" class="list-group-item list-group-item-action">
-                    <h2>Bigest Cities</h2>
+                    <h2>Biggest Cities</h2>
                 </a>
                 <a href="https://en.wikipedia.org/wiki/Berlin" target="_blank" class="list-group-item list-group-item-action">
                     <div class="d-flex w-100 justify-content-between">
