added something to "eventlisteners"

--- a/3-Examples/Event-Listeners/eventListeners.html
+++ b/3-Examples/Event-Listeners/eventListeners.html
@@ -17,6 +17,12 @@
             margin: 1rem;
             padding: 1rem;
         }
+        li {
+            padding: 1rem;
+            margin: 1rem;
+            background: grey;
+            border: dotted 2px;
+        }
         
     </style>
 </head>
@@ -30,6 +36,13 @@
     <div id="secondDiv">
         <button>Click me too</button>
     </div>
+
+    <ul>
+        <li>buy milk</li>
+        <li>read a book</li>
+        <li>play piano</li>
+        <li>pay the bills</li>
+    </ul>
 
 
     <script src="eventListeners.js"></script>
