finished tasks-DOM exercise "About Me"

--- a/js/DOM/tasks-DOM/tasksDom.html
+++ b/js/DOM/tasks-DOM/tasksDom.html
@@ -22,6 +22,15 @@
 <body>
     <h1>My Book List</h1>
     <ul class="book-list"></ul>
+
+
+    <h1>About Me</h1>
+
+      <ul id="my-info">
+        <li>Nickname: <span id="nickname"></span>
+        <li>Favorites:  <span id="favorites"></span>
+        <li>Hometown: <span id="hometown"></span>
+      </ul>
     
     <script src="tasksDom.js"></script>
 </body>
